<resources>
    <string name="app_name">YavinTest</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="select_your_ticket">Purchase Tickets</string>
    <string name="edit">UPDATE</string>
    <string name="pay">BUY</string>
    <string name="select_your_ticket_body">You can select multiple tickets by clicking on it.</string>
    <string name="explanation_pay">To pay click on:</string>
    <string name="date">"select date "</string>
    <string name="modification_explanation">Modified the price and click button to valid the modification. You can on modify one by one.</string>
    <string name="history_explanation">Click on button to select range of date</string>
    <string name="no_transaction">There is no transaction yet</string>
    <string name="payment_error">Payment Error</string>
    <string name="cancel">Cancel</string>
    <string name="total">Total</string>
    <string name="euro_eur">Euro (EUR)</string>
    <string name="debit">DEBIT</string>
    <string name="date_select">2020-01-15, 11:19:31</string>
    <string name="price_random">120 EUR</string>
</resources>