<?xml version="1.0" encoding="UTF-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/singleJourneyTicketCardView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/ticket_card_view_size"
    android:layout_margin="@dimen/card_margin"
    android:outlineAmbientShadowColor="@color/purple_700"
    android:outlineSpotShadowColor="@color/purple_700"
    android:padding="5dp"
    app:cardCornerRadius="@dimen/ticket_card_view_radius"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/explanationText">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ticketPriceItem"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/transactionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/date_select"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/purple_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transactionDate" />


        <TextView
            android:id="@+id/transactionPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_random"
            android:textColor="@color/purple_700"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <TextView
            android:id="@+id/transactionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debit"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/transactionPrice"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>