<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Right most TextView -->
            <TextView
                android:id="@+id/cartCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/cart_count_textView_margin"
                android:text="0"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/cart_count_textView_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/cartIcon"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/cartIcon_size"
                android:layout_marginEnd="@dimen/cartIcon_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cartCountTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_shopping_cart_24dp" />

            <!-- ImageView beside title of ToolBar -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/image_view_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cartIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_home_black_24dp"
                app:tint="#ffff" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_imageview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/lobster_regular"
        android:text="@string/select_your_ticket"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <TextView
        android:id="@+id/explanationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_your_ticket_body"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tittle" />

    <TextView
        android:id="@+id/explanationPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explanation_pay"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        app:drawableRightCompat="@drawable/ic_shopping_cart_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/explanationText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ticketsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/explanationPay" />


</androidx.constraintlayout.widget.ConstraintLayout>
